--- a/home.html
+++ b/home.html
@@ -1,5 +1,16 @@
 <html><title>k e n n e t h d e e . b e</title>
 
-
-
+<h1>Welkom</h1>
+<br>
+<br>
+Wil je mij contacteren om PR-nieuws te melden, persberichten te sturen of te reageren op een artikel of reportage? Dan kan dat op kenneth.dee APENSTAARTJE vtmnieuws.be
+<br>
+<br>
+Heb je gevoelige informatie of tips die je liever in vertrouwen naar me stuurt, dan kan dat op kenneth.dee APENSTAARTJE protonmail.com
+<br>
+<br>
+Je kan eventueel ook iets geprint of uitgeschreven opsturen naar t.a.v. Kenneth Dée, Mediaplein 1 2018 Antwerpen.
+<br>
+<br>
+Wil je graag weten wat ik eet, welke nerdy dingen ik doe of waar ik uitga bijvoorbeeld? Dan kan je terecht op mijn <a href="https://instagram.com/kennethdee">Instagram</a>. Voor meningen over alledaagse ergernissen, onzin of slechte grapjes raad ik je mijn <a href="https://twitter.com/kennethdee">twitter</a> aan. Voor videogames die ik speel passeer je best even op <a href="https://steamcommunity.com/id/sir_kenneth">Steam.</a>
 </html>
