Sociale media, contact en 'over mij' toegevoegd

--- a/home.html
+++ b/home.html
@@ -3,14 +3,27 @@
 <h1>Welkom</h1>
 <br>
 <br>
+<h2>Contact leggen</h2>
 Wil je mij contacteren om PR-nieuws te melden, persberichten te sturen of te reageren op een artikel of reportage? Dan kan dat op kenneth.dee APENSTAARTJE vtmnieuws.be
 <br>
 <br>
-Heb je gevoelige informatie of tips die je liever in vertrouwen naar me stuurt, dan kan dat op kenneth.dee APENSTAARTJE protonmail.com
+Heb je gevoelige informatie of tips die je liever in vertrouwen naar me stuurt, dan gebruik je best kenneth.dee APENSTAARTJE protonmail.com
 <br>
 <br>
 Je kan eventueel ook iets geprint of uitgeschreven opsturen naar t.a.v. Kenneth Dée, Mediaplein 1 2018 Antwerpen.
 <br>
 <br>
-Wil je graag weten wat ik eet, welke nerdy dingen ik doe of waar ik uitga bijvoorbeeld? Dan kan je terecht op mijn <a href="https://instagram.com/kennethdee">Instagram</a>. Voor meningen over alledaagse ergernissen, onzin of slechte grapjes raad ik je mijn <a href="https://twitter.com/kennethdee">twitter</a> aan. Voor videogames die ik speel passeer je best even op <a href="https://steamcommunity.com/id/sir_kenneth">Steam.</a>
+<h2>Sociale media</h2>
+Wil je graag weten wat ik eet, welke nerdy dingen ik doe of waar ik uitga bijvoorbeeld? Dan kan je terecht op mijn <a href="https://instagram.com/kennethdee">Instagram</a>. 
+<br>
+<br>
+Voor meningen over alledaagse ergernissen, onzin of slechte grapjes raad ik je mijn <a href="https://twitter.com/kennethdee">Twitter</a> aan. 
+<br>
+<br>
+Voor videogames die ik speel passeer je best even op <a href="https://steamcommunity.com/id/sir_kenneth">Steam.</a>
+<br>
+<br>
+<h2>Over mij</h2>
+Als technologiejournalist probeer ik heel ingewikkelde dingen of belangrijk nieuws op een heel begrijpbare manier te brengen voor een groot publiek. Ik maak reportages voor VTMNIEUWS, schrijf artikels voor HLN en vertel soms iets op de radio bij Q-Music en Joe.
+
 </html>
