Over mijn privé toegevoegd

--- a/home.html
+++ b/home.html
@@ -23,7 +23,17 @@ Voor meningen over alledaagse ergernissen, onzin of slechte grapjes raad ik je m
 Voor videogames die ik speel passeer je best even op <a href="https://steamcommunity.com/id/sir_kenneth">Steam.</a>
 <br>
 <br>
-<h2>Over mij</h2>
-Als technologiejournalist probeer ik heel ingewikkelde dingen of belangrijk nieuws op een heel begrijpbare manier te brengen voor een groot publiek. Ik maak reportages voor VTMNIEUWS, schrijf artikels voor HLN en vertel soms iets op de radio bij Q-Music en Joe.
-
+<h2>Over mijn job</h2>
+Als technologiejournalist probeer ik heel ingewikkelde dingen of belangrijk nieuws op een heel begrijpbare manier te brengen voor een groot publiek. Ik maak reportages voor VTMNIEUWS, schrijf artikels voor HLN en vertel soms iets op de radio bij Q-Music en Joe. De wereld is heel ingewikkeld geworden en verandert voortdurend. Het is mijn taak om een beetje houvast te geven aan kijkers en lezers. En uiteraard ook te wijzen op dingen die fout gaan, bij bedrijven of de overheid bijvoorbeeld.
+<br>
+<br>
+<h2>Ik ben boos op jou</h2>
+ Het is belangrijk om te begrijpen dat journalisten niet altijd vertellen of brengen wat je graag hoort, maar vooral dingen waarvan we denken dat ze belangrijk zijn. We doen steeds alle moeite om dat zo objectief mogelijk te doen. Journalisten zijn geen AI, dat betekent dat ze keuzes maken en op hun eigen gevoel en gebaseerd op feiten iets maken waarvan ze denken dat dat interessant en naar waarheid is. Als het toch fout loopt, dan mag je me dat altijd laten weten. Maar hou er rekening mee dat journalisten ook maar mensen zijn. Die bovendien ook graag eens Netflix kijken of een game spelen in hun vrije tijd. Daarom wordt niet alles meteen beantwoordt.
+<br>
+<br>
+<h2>Over mijn privé</h2>
+Ik ben geboren in Bonheiden, heb met mijn ouders altijd in Mechelen gewoond maar ben intussen verhuisd naar Antwerpen (Luchtbal). Ik heb geen kinderen, maar wel een geweldige hond (Loki), drie tattoos, een partner en veel te veel computers. Ik ben eigenlijk de hele tijd met mijn werk bezig, maar ga daarbuiten graag op reis naar verre bestemmingen. Ik hou van elektronische muziek, auto's, games, alles waar een chip in zit, gekke en creatieve ideeën en knutsel veel met 3D-printers, domotica, lasercutters... mijn motto is doorgaans dat je moet genieten van het leven, maar nooit ten koste van anderen.
+<br>
+<br>
+Ik hou er van als mensen spontaan goeiedag zeggen of een praatje maken. Ik hou niet van oneerlijkheid, jaloezie of gierigheid.
 </html>
